# robotic_neck_viz

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: camera_urdf.yaml  lidar_urdf.yaml  robot_urdf.yaml
launch/: robotic_neck_tf2.launch.py  robotic_neck_urdf.launch.py  wamv_lidar_urdf.launch.py  wamv_robotic_neck_urdf.launch.py
robotic_neck_viz/: imu_viz.py  inverse_kinematics.py  neck_joint_publisher.py  neck_state_joint_publisher.py  neck_target_joint_publisher.py  tf_publisher.py
robotic_neck_viz/experiments/: laser_sim.py  neck_joint_publisher.py  neck_mec_sim.py  tensor_len_sim.py
rviz/: robotic_neck.rviz  wamv.rviz
urdf/: cross_piece.xacro  linear_actuator.xacro  robot.urdf.xacro  robotic_neck.urdf.xacro  robotic_neck.xacro  robotic_neck_cam.xacro  robotic_neck_state.urdf.xacro  robotic_neck_target.urdf.xacro  wamv_robotic_neck.urdf.xacro
urdf/camera/: depthai_camera.urdf.xacro  depthai_camera.xacro
urdf/lidar/: ouster_lidar.urdf.xacro  ouster_lidar.xacro
urdf/models/base/: model.config
urdf/models/cross_piece/: model.config
urdf/models/cross_piece/mesh/: cross_piece.dae
urdf/models/linear_actuator_axis/: model.config
urdf/models/linear_actuator_tube/mesh/: linear_actuator_tube.dae
urdf/models/linear_actuator_tube_white/: model.config
urdf/models/linear_actuator_tube_white/mesh/: linear_actuator_tube_white.dae
urdf/models/platform_white/: model.config
urdf/models/platform_white/mesh/: platform_white_h.dae
