<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotic_neck_viz</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cristian.nova@uc.cl">novi</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>tf2_tools</build_depend>
  <build_depend>tf_transformations</build_depend>
  <build_depend>rqt_tf_tree</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
